--- a/my.kv
+++ b/my.kv
@@ -1,2 +1,31 @@
-Floatlayout:
-    
+BoxLayout:
+    orientation: 'vertical'
+    BoxLayout:
+
+        orientation: 'horizontal'
+
+        Button:
+            id: bLivro
+            text: 'LIVRO'
+            font_size: 30
+
+
+        Button:
+            id: bAutor
+            text: 'AUTOR'
+            font_size: 30
+
+        Button:
+            id: bEditora
+            text: 'EDITORA'
+            font_size: 30
+
+        Button:
+            id: bCategoria
+            text: 'CATEGORIA'
+            font_size: 30
+
+    BoxLayout:
+        orientation: 'vertical'
+        Label:
+            text: 'Label'
